--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,19 @@
-h1 {
-  color: red;
-  background-color: yellow;
-  border: 1px solid black;
+html {
+  min-height: 100%;
+  height: 100%;
 }
 
-p {
-  color: red;
+body {
+  background: linear-gradient(to bottom right ,#ff7241, #ff4a1f);
+}
+
+.exactCenter {
+  width:200px;
+  height:200px;
+  position: fixed;
+  background-color: #FFA500;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -100px;
 }
