--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,9 @@ body {
   left: 50%;
   margin-top: -100px;
   margin-left: -100px;
+  border: 5px solid #FFA500;
   background-image: url("../9FB0F5E6-E05B-4E05-AA0B-47209E11FF9C.png");
-background-size:contain;
-background-position:center;
-background-repeat:no-repeat;
+  background-size:contain;
+  background-position:center;
+  background-repeat:no-repeat;
 }
