--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@ body {
 }
 
 .floatCenter {
-  width:200px;
-  height:200px;
+  width:25%;
+  height:25%;
   position: fixed;
   background-color: #FFA500;
   top: 50%;
