--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 html {
   min-height: 100%;
   height: 100%;
+  width: 0 auto;
 }
 
 body {
@@ -14,7 +15,7 @@ body {
   background-color: #FFA500;
   top: 50%;
   margin-top: -100px;
-  margin-left: 50%;
+  margin-left: 0%;
   border: 5px solid #FFA500;
   background-image: url("../9FB0F5E6-E05B-4E05-AA0B-47209E11FF9C.png");
   background-size:contain;
