--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
   background-color: #FFA500;
   top: 50%;
   margin-top: -100px;
-  margin-left: 0%;
+  margin: 0 auto;
   border: 5px solid #FFA500;
   background-image: url("../9FB0F5E6-E05B-4E05-AA0B-47209E11FF9C.png");
   background-size:contain;
