--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,28 @@ body {
   background: linear-gradient(to bottom right ,#ff7241, #ff4a1f);
 }
 
-.floatCenter {
-  width:25%;
-  height:25%;
-  position: relative;
-  background-color: #FFA500;
-  top: 50%;
-  margin: 0 auto;
+.background {
+	width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+	background-color: white;
+}
+
+.content {
+        width: 200px;
+        height: 200px;
+        background-color: #FFA500;
+        position: absolute; /*Can also be `fixed`*/
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        /*Solves a problem in which the content is being cut when the div is smaller than its' wrapper:*/
+        max-width: 100%;
+        max-height: 100%;
+        overflow: auto;
   border: 5px solid #FFA500;
   background-image: url("../9FB0F5E6-E05B-4E05-AA0B-47209E11FF9C.png");
-  background-size:contain;
-  background-position:center;
-  background-repeat:no-repeat;
 }
