--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-	background-color: white;
 }
 
 .content {
@@ -32,4 +31,5 @@ body {
         overflow: auto;
   border: 5px solid #FFA500;
   background-image: url("../9FB0F5E6-E05B-4E05-AA0B-47209E11FF9C.png");
+  background-size: contain;
 }
