--- a/styles.css
+++ b/styles.css
@@ -33,4 +33,5 @@ body {
   background-image: url("../9FB0F5E6-E05B-4E05-AA0B-47209E11FF9C.png");
   background-size: contain;
   background-repeat: no-repeat;
+  Background-position: center;
 }
