--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  background: linear-gradient(to bottom right ,##22c1c3, ##fdbb2d);
+  background: linear-gradient(to bottom right ,#22c1c3, #fdbb2d);
 }
 
 .background {
