--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,29 @@ body {
         max-width: 100%;
         max-height: 100%;
         overflow: auto;
-	padding: 10%;
+	padding: 0%;
   border: 0px solid #FFA500;
   background-image: url("../9FB0F5E6-E05B-4E05-AA0B-47209E11FF9C.png");
   background-size: contain;
   background-repeat: no-repeat;
   Background-position: center;
+}
+
+
+.outer {
+        width: 200px;
+        height: 200px;
+        /*background-color: #FFA500;*/
+        position: absolute; /*Can also be `fixed`*/
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        /*Solves a problem in which the content is being cut when the div is smaller than its' wrapper:*/
+        max-width: 100%;
+        max-height: 100%;
+        overflow: auto;
+	padding: 10%;
+  border: 1px solid #FFA500;
 }
