--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
 }
 
 
-.outer {
+.innerouter {
         width: 200px;
         height: 200px;
         /*background-color: #FFA500;*/
@@ -53,5 +53,24 @@ body {
         max-height: 100%;
         overflow: auto;
 	padding: 5%;
+  border: 1px solid #FFA500;
+}
+
+.outer {
+        width: 200px;
+        height: 200px;
+        /*background-color: #FFA500;*/
+        position: absolute; /*Can also be `fixed`*/
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        /*Solves a problem in which the content is being cut when the div is smaller than its' wrapper:*/
+        max-width: 100%;
+        max-height: 100%;
+        overflow: auto;
+	padding: 2px;
+	background: linear-gradient(to bottom left ,#22c1c3, #fdbb2d);
   border: 1px solid #FFA500;
 }
