--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ body {
         max-height: 100%;
         overflow: auto;
 	padding: 5%;
+	background: linear-gradient(to top left ,#22c1c3, #fdbb2d);
   border: 1px solid #FFA500;
 }
 
@@ -71,6 +72,5 @@ body {
         max-height: 100%;
         overflow: auto;
 	padding: 2px;
-	background: linear-gradient(to bottom left ,#22c1c3, #fdbb2d);
   border: 1px solid #FFA500;
 }
