--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ body {
         max-width: 100%;
         max-height: 100%;
         overflow: auto;
-	padding: 5%;
+	padding: 0px;
 	background: linear-gradient(to top left ,#22c1c3, #fdbb2d);
   border: 1px solid #FFA500;
 }
