--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,6 @@ body {
         overflow: auto;
 	padding: 5%;
 	/* background: linear-gradient(to top left ,#22c1c3, #fdbb2d); */
-	border-image: linear-gradient(to top left, #22c1c3, #fdbb2d) 1;
+	border-image: linear-gradient(to top left, #ff9966, #ff5e62) 1;
         /* border: 1px solid #FFA500; */
 }
