--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,21 @@ body {
     padding: 0;
 }
 
+
+/* Smartphones (portrait and landscape) ----------- */
+@media only screen 
+and (min-device-width : 320px) 
+and (max-device-width : 480px) {
+.content {
+	padding:10%;
+	}
+.outer {
+	padding:10%;
+	}
+}
+/* Smartphones (portrait and landscape) ----------- */
+
+
 .content {
         width: 200px;
         height: 200px;
