--- a/styles.css
+++ b/styles.css
@@ -8,80 +8,64 @@ body {
   background: linear-gradient(to bottom right ,#22c1c3, #fdbb2d);
 }
 
-.background {
-	width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+.exactCenter {
+      width:200px;
+      height:200px;
+      position: fixed;
+      border: 10px solid rgb(255, 255, 255);
+      border: 10px solid rgba(255, 255, 255, .15);top: 50%;
+      left: 50%;
+      margin-top: -100px;
+      margin-left: -100px;
+    }
+
+.div1
+    {
+      width: 100%;
+      height:70%;
+      background-color:#A52A2A ;
+      margin: 0 auto;
+    }
+    .div2
+    {
+      width: 100%;
+      height:30%;
+      background-color:#FFA500 ;
+      margin: 0 auto;
+    }
+    .div3
+    {
+      width: 50%;
+      height:70px;
+      background-color:#008000 ;
+      margin: 0 auto;
+    }
+
+
+@media only screen and (min-width: 800px) {
+  .exactCenter {
+      width:300px;
+      height:300px;
+      position: fixed;
+      border: 15px solid rgb(255, 255, 255);
+    border: 15px solid rgba(255, 255, 255, .15);
+    -webkit-background-clip: padding-box; /* for Safari */
+    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */top: 50%;
+      left: 50%;
+      margin-top: -150px;
+      margin-left: -150px;
+    }
 }
 
-
-/* Smartphones (portrait and landscape) ----------- */
-
-@media only screen and (max-width: 3000px) {
-
-	.content {
-	padding:10%;
-	}
-.outer {
-	padding:10%;
-	border: 1px solid red;
-	}
-	
-}
-
-/* Smartphones (portrait and landscape) ----------- */
-
-
-.content {
-        width: 200px;
-        height: 200px;
-        /*background-color: #FFA500;*/
-        position: absolute; /*Can also be `fixed`*/
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        margin: auto;
-        /*Solves a problem in which the content is being cut when the div is smaller than its' wrapper:*/
-        max-width: 100%;
-        max-height: 100%;
-        overflow: auto;
-	padding: 5%;
-  border: 0px solid #FFA500;
-  background-image: url("../9FB0F5E6-E05B-4E05-AA0B-47209E11FF9C.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  Background-position: center;
-}
-
-
-.outer {
-        width: 200px;
-        height: 200px;
-        /*background-color: #FFA500;*/
-        position: absolute; /*Can also be `fixed`*/
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        margin: auto;
-        /*Solves a problem in which the content is being cut when the div is smaller than its' wrapper:*/
-        max-width: 100%;
-        max-height: 100%;
-        overflow: auto;
-	padding: 5%;
-	/* background: linear-gradient(to top left ,#22c1c3, #fdbb2d); */
-	/* border-image: linear-gradient(to top left, #ff9966, #ff5e62) 1; */
-        border: 1px solid #FFA500;
-}
-
-.footer {
-  position: absolute;
-  right:1%;
-  bottom:0px;
-  width: 200px;
-  text-align: right;
-  font-family: 'Fira Sans Condensed', sans-serif;
-  font-size: 1.5em;
+@media only screen and (min-width: 1200px) {
+  .exactCenter {
+      width:400px;
+      height:400px;
+      position: fixed;
+            border: 20px solid rgb(255, 255, 255);
+    border: 20px solid rgba(255, 255, 255, .15);top: 50%;
+      left: 50%;
+      margin-top: -200px;
+      margin-left: -200px;
+    }
 }
