--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,10 @@ body {
       height:70%;
       background-color:#A52A2A ;
       margin: 0 auto;
+      background-image: url("../9FB0F5E6-E05B-4E05-AA0B-47209E11FF9C.png");
+      background-size: contain;
+      background-repeat: no-repeat;
+      Background-position: center;
     }
     .div2
     {
