--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
       height:30%;
       /* background-color:#FFA500; */
       margin: 0 auto;
-      text-align: right;
+      text-align: center;
       font-family: 'Fira Sans Condensed', sans-serif;
       font-size: 1.5em;
     }
