--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,8 @@ body {
       /* background-color:#FFA500; */
       margin: 0 auto;
       text-align: center;
-      font-family: 'Fira Sans Condensed', sans-serif;
-      font-size: 1.5em;
+      font-family: 'Fira Sans Condensed', sans-serif;  
+      font-size: 3vw;
     }
     .div3
     {
