--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
       /* background-color:#FFA500; */
       margin: 0 auto;
       text-align: center;
-      font-family: 'Fira Sans Condensed', sans-serif;  
+      font-family: 'Overpass', sans-serif;  
       font-size: 5vw;
     }
     .div3
