--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
     {
       width: 100%;
       height:30%;
-      /* background-color:#FFA500; */
+      background-color:#FFA500;
       margin: 0 auto;
       text-align: center;
       font-family: 'Overpass', sans-serif;  
