--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
       background-size: contain;
       background-repeat: no-repeat;
       Background-position: center;
+      bottom: 0px;
     }
     .div2
     {
