--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
       margin: 0 auto;
       text-align: center;
       font-family: 'Overpass', sans-serif;  
-      font-size: 8vw;
+      font-size: 6vw;
       position:relative;
       top:-25px;
     }
@@ -54,8 +54,11 @@ body {
     }
 
 
-@media screen and (max-width 900px){
-  .exactCenter {
+
+  @media only screen and (max-device-width: 480px) {
+       /* styles for mobile browsers smaller than 480px; (iPhone) */
+    
+      .exactCenter {
       width:200px;
       height:200px;
       position: fixed;
@@ -64,6 +67,40 @@ body {
       left: 48%;
       margin-top: -100px;
       margin-left: -100px;
+    }
+    
+    .div2 {
+      font-size: 4vw;
+          }
+    }
+
+
+    @media only screen and (device-width: 768px) {
+       /* default iPad screens */
+      
+      .exactCenter {
+      width:400px;
+      height:400px;
+      position: fixed;
+      border: 20px solid rgb(255, 255, 255);
+      border: 20px solid rgba(255, 255, 255, .15);top: 50%;
+      left: 48%;
+      margin-top: -200px;
+      margin-left: -200px;
+      letter-spacing: -6px;
       font-size: 4vw;
     }
-}
+      
+      .div2 {
+      font-size: 4vw;
+          }
+    }
+
+    /* different techniques for iPad screening */
+    @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
+      /* For portrait layouts only */
+    }
+
+    @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape) {
+      /* For landscape layouts only */
+    }
