--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,3 @@
-<style type="text/css">
-      
 * main{ 
    height: 100%; 
    width: 100%; 
@@ -11,7 +9,7 @@ h1,h2 {
   font-size: 18px;
   font-family: 'Raleway', sans-serif;
   padding: 3em 2em;
-  color: #aaa
+  color: #aaa;
 }
   
   html{
@@ -129,6 +127,3 @@ h1,h2 {
       
   .button:hover {
     background-color: #f1f1f1;
-  
-      
-    </style>
