--- a/mystyle.css
+++ b/mystyle.css
@@ -11,7 +11,7 @@ body {
   width: 100%;
   height: 100%;
   /* other styling goes here */
-  background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%);
+  background: linear-gradient(315deg, rgba(242, 255, 0, 1) 3%, rgba(0, 98, 255, 1) 38%, rgba(152, 0, 255, 1) 68%, rgba(255, 0, 107, 1) 98%);
     animation: gradient 15s ease infinite;
     background-size: 400% 400%;
     background-attachment: fixed;
