--- a/mystyle.css
+++ b/mystyle.css
@@ -128,7 +128,7 @@ h1,h2 {
   font-weight: 200;
   margin: 0.4em 0;
 }
-h1 { font-size: 3.5em; }
+h1 { font-size: 5em; }
 h2 {
   color: #888;
   font-size: 2em;
@@ -140,4 +140,8 @@ h1,h2 {
   font-size: 18px;
   font-family: 'Raleway', sans-serif;
   color: #efefef;
+}
+
+mark {
+  background-color: pink;
 }
