--- a/mystyle.css
+++ b/mystyle.css
@@ -137,7 +137,7 @@ h2 {
 h1,h2 {
   font-weight: 200;
   margin: -0.5em 0;
-  font-size: 18px;
+  font-size: 1.8em;
   font-family: 'Raleway', sans-serif;
   color: #efefef;
 }
